--- a/reclamo.html
+++ b/reclamo.html
@@ -67,7 +67,7 @@
             <div class="fases">
                 <div class="reclamo_fases">
                     <div class="box_fases inactivo">
-                        <img src="img/reclamo1solo.png" alt="">
+                        <img class="ancho_imgreclamos" src="img/reclamo1solo.png" alt="">
                         <img class="flecha_reclamo1" src="img/flechasblancas.png" alt="">
 
                         <div class="rectangulo">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="box_fases active">
-                        <img src="img/reclamo2solo.png" alt="">
+                        <img class="ancho_imgreclamos" src="img/reclamo2solo.png" alt="">
                         <img class="flecha_reclamo2" src="img/flechasblancas.png" alt="">
 
                         <div class="rectangulo">
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="box_fases pendiente">
-                        <img src="img/reclamo3solo.png" alt="">
+                        <img class="ancho_imgreclamos" src="img/reclamo3solo.png" alt="">
                         <div class="rectangulo">
                             <h3>3</h3>
                             <p>INFORMACIÓN DEL RESULTADO DEL RECLAMO</p>
